# toolkit-extension

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
docs/: api.rst  conf.py  index.rst  installation.rst  rebuild.sh  requirements.txt  usage.rst
docs/examples/: basic_example.ipynb  bias_correction_example.ipynb  index.rst  postprocessing_basic_example.ipynb
examples/: process_s2s.ipynb
src/toolkit_extension/: __init__.py  postprocess.py  preprocess.py
